= Changelog
:url-repo: https://gitlab.com/antora/antora-lunr-extension

This document provides a summary of all notable changes to this project grouped by release.
For a detailed view of what's changed, refer to the {url-repo}/commits[commit history] of this project.

== Unreleased

=== Changed

* Remove workaround for #44 now that streams can safely be written to multiple destinations starting in Antora 3.0.3
* upgrade lunr-languages from 1.9 to 1.10; changes nodejieba dependency to @node-rs/jieba (#60)

== 1.0.0-alpha.8 (2022-05-23)

=== Fixed

* Compile `search-ui.js` before releasing

== 1.0.0-alpha.7 (2022-05-23)

=== Fixed

* Create stream for vendored JS file on demand to support multiple destinations (#44)
* Automatically add `tinyseg.js` needed for Japanese support and `wordcut.js` needed for Thai support (#45)

=== Changed

* Automatically add `search-ui.js` and `search.css` files (if they don't exist) and remove dependency on supplemental UI (#15)
* Remove position metadata from the index to reduce its size (#41)

=== Added

* Allow to restrict search to current component using a checkbox (#4)
* Display each search result under the title and version of the component the result is from (#35)
* Support multi-terms highlighting and highlight term on titles (#41)
* Add Apache Solr to the "Who's using it?" section
* Run the test suite on Windows

== 1.0.0-alpha.6 (2022-03-15)

=== Fixed

* Set an identifier on section titles document (#37)
* Fix ternary condition using parenthesis

== 1.0.0-alpha.5 (2022-02-18)

=== Changed

* Use numerical identifiers in order to reduce the index size (#33)
* Disable the search bar until the index is loaded and publish an event (#34)

== 1.0.0-alpha.4 (2022-01-27)

=== Fixed

* Correctly detect custom search-scripts.hbs partial (#32)

== 1.0.0-alpha.3 (2022-01-17)

=== Fixed

* Add data directory to npm package (#31)

== 1.0.0-alpha.2 (2022-01-16)

=== Added
