@@ -90,6 +90,14 @@
   margin-bottom: 0.25em;
 }
 
+.search-result-document-hit .search-result-keywords {
+  margin-top: 0.25em;
+}
+
+.search-result-document-hit .search-result-keywords-field-label {
+  font-weight: bold;
+}
+
 #search-input {
   padding: 0.25em;
 }
@@ -103,7 +111,7 @@
 }
 
 #search-field .filter {
-  background: #fff linear-gradient(180deg,#e1e1e1 0,#e1e1e1) no-repeat 0/1px 50%;
+  background: #fff linear-gradient(180deg, #e1e1e1 0, #e1e1e1) no-repeat 0/1px 50%;
   border: 1px solid #e1e1e1;
   border-left: none;
   border-radius: 0 0.1em 0.1em 0;
