@@ -89,6 +89,7 @@ function generateIndex (playbook, contentCatalog, { indexLatestOnly = false, lan
     this.field('name')
     this.field('text')
     this.field('component')
+    this.field('keyword', { boost: 5 })
     documents.forEach((doc) => {
       doc.titles.forEach((title) => {
         this.add({ id: `${doc.id}-${title.id}`, title: title.text })
@@ -124,6 +125,7 @@ function extractIndexContent (page, $) {
   const documentTitle = $h1.first().text()
   $h1.remove()
   const titles = []
+  const keywords = page.asciidoc.attributes?.keywords
   let id = 1
   $('h2,h3,h4,h5,h6', article).each(function () {
     const $title = $(this)
@@ -162,6 +164,7 @@ function extractIndexContent (page, $) {
     name: page.src.stem,
     url: page.pub.url,
     titles: titles, // TODO get title id to be able to use fragment identifier
+    keyword: keywords,
   }
 }
 
