@@ -9,7 +9,8 @@
     "Thor K. Høgås <thor@roht.no>",
     "Daniel Mulholland",
     "Gautier de Saint Martin Lacaze",
-    "Alexander Schwartz"
+    "Alexander Schwartz",
+    "Andre Schlegel-Tylla"
   ],
   "homepage": "https://antora.org",
   "repository": "https://gitlab.com/antora/antora-lunr-extension",
